# PKP

./: CMakeLists.txt  incrementArray.cu  main  main.cu  matriksMul.cu  matriksMulNblok.cu  matriksMulShared.cu  task1.cu  task2.cu
kemalbuild/: dataMovement.cu  incrementArray.cu  logisticRegression.cu  matrixMul.cu  topic1.cu  topic2.cu
rizkibuild/: CMakeCache.txt  Makefile  cmake_install.cmake  incrementArray  main
